--- a/glam.html
+++ b/glam.html
@@ -31,7 +31,7 @@
     /* HERO */
     .hero {
       height:100vh; display:flex; flex-direction:column; justify-content:center; align-items:center;
-      text-align:center; background:url('/images/glam1.jpg') center/cover no-repeat;
+      text-align:center; background:url('glam1.jpg') center/cover no-repeat;
       position:relative; color:var(--white);
     }
     .hero::before {
@@ -132,11 +132,11 @@
 <section id="gallery">
   <h2>Gallery</h2>
   <div class="gallery">
-    <img src="/images/glambraids.jpg" alt="Braids">
-    <img src="/images/glamnails.jpg" alt="Wigs">
-    <img src="/images/glamwigs.jpg" alt="Nails">
-    <img src="/images/glamjewels.jpg" alt="Jewelry">
-    <img src="/images/glamtats.jpg" alt="Tattoo">
+    <img src="glambraids.jpg" alt="Braids">
+    <img src="glamnails.jpg" alt="Wigs">
+    <img src="glamwigs.jpg" alt="Nails">
+    <img src="glamjewels.jpg" alt="Jewelry">
+    <img src="glamtats.jpg" alt="Tattoo">
   </div>
 </section>
 
@@ -217,3 +217,4 @@
 
 </body>
 </html>
+
